--- a/parts/front-page-banner-quote.html
+++ b/parts/front-page-banner-quote.html
@@ -1,9 +1,17 @@
-<!-- wp:group {"style":{"dimensions":{"minHeight":"90vw"},"spacing":{"padding":{"top":"var:preset|spacing|60","right":"var:preset|spacing|60","bottom":"var:preset|spacing|60","left":"var:preset|spacing|60"}}},"backgroundColor":"black","layout":{"type":"constrained"}} -->
-<div class="wp-block-group has-black-background-color has-background" style="min-height:90vw;padding-top:var(--wp--preset--spacing--60);padding-right:var(--wp--preset--spacing--60);padding-bottom:var(--wp--preset--spacing--60);padding-left:var(--wp--preset--spacing--60)"><!-- wp:paragraph {"style":{"typography":{"fontStyle":"italic","fontWeight":"900"}},"textColor":"white","fontSize":"huge","fontFamily":"literata-display"} -->
-    <p class="has-white-color has-text-color has-literata-display-font-family has-huge-font-size" style="font-style:italic;font-weight:900">Verjetno ima vsak študent_ka Filofaksa kakšno zgodbo o tem, kako je moral pred sorodniki, prijatelji ali naključnimi neznanci zagovarjati svojo izbiro študija.</p>
-    <!-- /wp:paragraph -->
-    
-    <!-- wp:paragraph {"textColor":"vivid-green-cyan"} -->
-    <p class="has-vivid-green-cyan-color has-text-color">Martin Justin</p>
-    <!-- /wp:paragraph --></div>
-    <!-- /wp:group -->
+<!-- wp:group {"style":{"dimensions":{"minHeight":"90vh"},"spacing":{"padding":{"top":"0","right":"0","bottom":"0","left":"0"}}},"backgroundColor":"black","layout":{"type":"constrained"}} -->
+<div class="wp-block-group has-black-background-color has-background" style="min-height:90vh;padding-top:0;padding-right:0;padding-bottom:0;padding-left:0"><!-- wp:group {"style":{"spacing":{"padding":{"top":"var:preset|spacing|60","right":"var:preset|spacing|60","bottom":"var:preset|spacing|60","left":"var:preset|spacing|60"}}},"layout":{"type":"constrained"}} -->
+<div class="wp-block-group" style="padding-top:var(--wp--preset--spacing--60);padding-right:var(--wp--preset--spacing--60);padding-bottom:var(--wp--preset--spacing--60);padding-left:var(--wp--preset--spacing--60)"><!-- wp:paragraph {"style":{"typography":{"fontStyle":"italic","fontWeight":"900","lineHeight":"1.2"}},"textColor":"white","fontSize":"x-huge","fontFamily":"literata-display"} -->
+<p class="has-white-color has-text-color has-literata-display-font-family has-x-huge-font-size" style="font-style:italic;font-weight:900;line-height:1.2">Verjetno ima vsak študent_ka Filofaksa kakšno zgodbo o tem, kako je moral pred sorodniki, prijatelji ali naključnimi neznanci <span class="has-poster-font-size">zagovarjati</span> svojo izbiro študija.</p>
+<!-- /wp:paragraph -->
+
+<!-- wp:group {"layout":{"type":"flex","flexWrap":"nowrap","justifyContent":"space-between"}} -->
+<div class="wp-block-group"><!-- wp:paragraph {"textColor":"vivid-green-cyan","fontFamily":"basier-square"} -->
+<p class="has-vivid-green-cyan-color has-text-color has-basier-square-font-family"><strong>Martin Justin</strong></p>
+<!-- /wp:paragraph -->
+
+<!-- wp:paragraph {"textColor":"vivid-green-cyan","fontFamily":"basier-square"} -->
+<p class="has-vivid-green-cyan-color has-text-color has-basier-square-font-family">→ preberi</p>
+<!-- /wp:paragraph --></div>
+<!-- /wp:group --></div>
+<!-- /wp:group --></div>
+<!-- /wp:group -->
